Record creates new practice

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -16,6 +16,7 @@
     "progress.record.sets": "Sets", 
     "progress.send": "Send", 
 
+    "part.group": "Muscle Group",
     "part.chest": "Chest", 
     "part.leg": "Leg", 
     "part.shoulder": "Shoulder", 
