--- a/frontend/src/locales/zh_TW.json
+++ b/frontend/src/locales/zh_TW.json
@@ -16,6 +16,7 @@
     "progress.record.sets": "組數", 
     "progress.send": "送出",
 
+    "part.group": "部位",
     "part.chest": "胸", 
     "part.leg": "腿", 
     "part.shoulder": "肩", 
